abstract public class Piatto {
    public abstract void Preparare();
}
